--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <head>
     <meta charset="utf-8">
     <title>Mohit Iyyer &mdash; Home</title>
-    <link rel="stylesheet" href="css/new_master.css" />
+    <link rel="stylesheet" href="master.css" />
 
     <script>
         function unhide(divID) {
