--- a/index.html
+++ b/index.html
@@ -1234,6 +1234,7 @@ Location = {Baltimore, Maryland},
                 </li>
             </ul>
         </div>
+    This website is built based on Prof. Mohit Iyyer's <a href="https://people.cs.umass.edu/~miyyer/">website</a> template.
     </div>
 
 </body>
