--- a/index.html
+++ b/index.html
@@ -38,12 +38,12 @@
 
                 <h1>yixiao song</h1>
 
-                <h2>yixiaosong@umass.edu // <a href="./data/cv.pdf"> CV</a> // <a href="https://github.com/Yixiao-Song">github</a> // <a href="https://twitter.com/yixiao_song">twitter</a></h2> // <a href="https://www.instagram.com/yixiao_song/">instagram</a></h2>
+                <h2>yixiaosong@umass.edu // <a href="./data/cv.pdf"> CV</a> // <a href="https://github.com/Yixiao-Song">github</a> // <a href="https://twitter.com/yixiao_song">twitter</a> // <a href="https://www.instagram.com/yixiao_song/">instagram</a></h2>
                 <br>
 
                 <br>
 
-                <p>I am a Phd student in linguistics at <a href="https://www.umass.edu/linguistics">UMass Amherst</a> and a member of <a href="https://nlp.cs.umass.edu">UMass NLP NGRAM Lab</a>. I'm advised by . Previously, I was a Young Investigator at <a href="http://allenai.org/">AI2</a>; before that, I completed my PhD at the <a href="http://www.cs.umd.edu/">University of Maryland, College Park</a>, advised by <a href="http://www.umiacs.umd.edu/~jbg/">Jordan Boyd-Graber</a> and <a href="http://www.umiacs.umd.edu/~hal/">Hal Daumé III</a>.
+                <p>I am a Phd student in linguistics at <a href="https://www.umass.edu/linguistics">UMass Amherst</a> and a member of <a href="https://nlp.cs.umass.edu">UMass NLP NGRAM Lab</a>. I'm advised by <a href="https://people.umass.edu/bhatt/">Prof. Rajesh Bhatt</a> and <a href="https://people.cs.umass.edu/~miyyer/">Prof. Mohit Iyyer</a>. Previously, I was a Young Investigator at <a href="http://allenai.org/">AI2</a>; before that, I completed my PhD at the <a href="http://www.cs.umd.edu/">University of Maryland, College Park</a>, advised by <a href="http://www.umiacs.umd.edu/~jbg/">Jordan Boyd-Graber</a> and <a href="http://www.umiacs.umd.edu/~hal/">Hal Daumé III</a>.
                 My research interests lie broadly in natural language processing and machine learning. Problems that I'm currently excited about include:<br>
                 </p>
                 <p style="margin-left:3em;margin-top:-0.5em;margin-bottom:1.25em;">
