--- a/index.html
+++ b/index.html
@@ -43,10 +43,7 @@
 
                 <br>
 
-                <p>I am a PhD student in <a href="https://www.umass.edu/linguistics">linguistics at UMass Amherst</a> and a member of <a href="https://nlp.cs.umass.edu">UMass NLP NGRAM Lab</a>. I'm advised by <a href="https://people.umass.edu/bhatt/">Prof. Rajesh Bhatt</a> and <a href="https://people.cs.umass.edu/~miyyer/">Prof. Mohit Iyyer</a>. Previously, I finished my master study in <a href="https://www.ling.uni-konstanz.de">linguistics at University of Konstanz</a>.
-			
-			was a Young Investigator at <a href="http://allenai.org/">AI2</a>; before that, I completed my PhD at the <a href="http://www.cs.umd.edu/">University of Maryland, College Park</a>, advised by <a href="http://www.umiacs.umd.edu/~jbg/">Jordan Boyd-Graber</a> and <a href="http://www.umiacs.umd.edu/~hal/">Hal Daumé III</a>.
-                My research interests lie broadly in natural language processing and machine learning. Problems that I'm currently excited about include:<br>
+                <p>I am a PhD student in <a href="https://www.umass.edu/linguistics">linguistics at UMass Amherst</a> and a member of <a href="https://nlp.cs.umass.edu">UMass NLP NGRAM Lab</a>. I'm advised by <a href="https://people.umass.edu/bhatt/">Prof. Rajesh Bhatt</a> and <a href="https://people.cs.umass.edu/~miyyer/">Prof. Mohit Iyyer</a>. I completed my master's degree in <a href="https://www.ling.uni-konstanz.de">linguistics at University of Konstanz</a>, advised by <a href="https://ling.sprachwiss.uni-konstanz.de/pages/home/romero/">Prof. Maribel Romero</a>. My research interests lie broadly in natural language processing and machine learning. Problems that I'm currently excited about include:<br>
                 </p>
                 <p style="margin-left:3em;margin-top:-0.5em;margin-bottom:1.25em;">
                 (1) Designing improved methods for modeling and evaluating long-form text generation (e.g., document-level translation, long-form QA)<br>
