--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
                 <br>
 
-                <p>I am a PhD student in <a href="https://www.umass.edu/linguistics">linguistics at UMass Amherst</a> and a member of <a href="https://nlp.cs.umass.edu">UMass NLP NGRAM Lab</a>. I'm advised by <a href="https://people.umass.edu/bhatt/">Prof. Rajesh Bhatt</a> and <a href="https://people.cs.umass.edu/~miyyer/">Prof. Mohit Iyyer</a>. I completed my master's degree in <a href="https://www.ling.uni-konstanz.de">linguistics at University of Konstanz</a>, advised by <a href="https://ling.sprachwiss.uni-konstanz.de/pages/home/romero/">Prof. Maribel Romero</a>. My research interests lie broadly in natural language processing and machine learning. Problems that I'm currently excited about include:<br>
+                <p>I am a PhD student in <a href="https://www.umass.edu/linguistics">linguistics at UMass Amherst</a> and a member of <a href="https://nlp.cs.umass.edu">UMass NLP NGRAM Lab</a>. I'm advised by <a href="https://people.umass.edu/bhatt/">Prof. Dr. Rajesh Bhatt</a> and <a href="https://people.cs.umass.edu/~miyyer/">Prof. Dr. Mohit Iyyer</a>. I completed my master's degree in <a href="https://www.ling.uni-konstanz.de">linguistics at University of Konstanz</a>, advised by <a href="https://ling.sprachwiss.uni-konstanz.de/pages/home/romero/">Prof. Dr. Maribel Romero</a>. My research interests lie broadly in natural language processing and machine learning. Problems that I'm currently excited about include:<br>
                 </p>
                 <p style="margin-left:3em;margin-top:-0.5em;margin-bottom:1.25em;">
                 (1) Designing improved methods for modeling and evaluating long-form text generation (e.g., document-level translation, long-form QA)<br>
