--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
         </div>
         <br>
 
-        <div class="posts-wrapper" style="clear:both;margin-bottom:1.0em;">
+<!--         <div class="posts-wrapper" style="clear:both;margin-bottom:1.0em;">
             <span id="gotostudents" style="font-family: 'roboto_bold';font-size:1.4em;text-transform:uppercase;font-weight: 300;">GROUP</span> <span style="margin-left:4em"><a href="https://people.cs.umass.edu/~nsa/">Nader Akoury</a><br>
                 <span style="margin-left:9em"><a href="https://lilakk.github.io/">Yapei Chang</a></span><br>
                 <span style="margin-left:9em"><a href="https://mrdrozdov.github.io/">Andrew Drozdov</a> <span style="font-size:0.9em"><i>(w/ <a href="https://people.cs.umass.edu/~mccallum/">Andrew McCallum</a>)</i></span><br>
@@ -141,7 +141,7 @@
                     <span style="margin-left:9em"><a href="https://akshitab.github.io/">Akshita Bhagia</a><span style="font-size:0.9em"><i> (UMass MS, now research engineer at AI2)</i></span><br>
                     <span style="margin-left:9em"><a href="#">Dhruvil Gala</a><span style="font-size:0.9em"><i> (UMass UG, now at Microsoft)</i></span><br>
                     <span style="margin-left:9em"><a href="https://www.linkedin.com/in/ahsaasbajaj/">Ahsaas Bajaj</a><span style="font-size:0.9em"><i> (UMass MS, now at Walmart Labs)</i></span><br>
-                    <span style="margin-left:9em"><a href="#">Sangeetha Balasubramanian</a><span style="font-size:0.9em"><i> (UMass MS, now ML Engineer at Amazon)</i></span><br>
+                    <span style="margin-left:9em"><a href="#">Sangeetha Balasubramanian</a><span style="font-size:0.9em"><i> (UMass MS, now ML Engineer at Amazon)</i></span><br> -->
 
                 </div>
 <br><div style="display:inline-block;margin-left:9em;font-style:italic;line-height:1.6em">If you're a prospective PhD student, click <a href="javascript:unhide('prospect_faq');">here</a> for more info.</div><br>
