--- a/index.html
+++ b/index.html
@@ -57,12 +57,8 @@
         <div class="posts-wrapper" style="clear:both;margin-bottom:1.0em;">
         
     <span id="gototeaching" style="font-family: 'roboto_bold';font-size:1.4em;text-transform:uppercase;font-weight: 300;">TEACHING</span> 
-    <span style="margin-left:1.5em"><a href="cs685/index.html">Spring 2022: <i>Advanced Natural Language Processing (CS 685)</i></a></span><br>
-    <span style="margin-left:9em"><a href="cs685_f21/index.html">Fall 2021: <i>Advanced Natural Language Processing (CS 685)</i></a></span><br>
-    <span style="margin-left:9em"><a href="cs685_f20/index.html">Fall 2020: <i>Advanced Natural Language Processing (CS 685)</i></a></span><br>
-            <span style="margin-left:9em"><a href="cs585/index.html">Fall 2019: <i>Introduction to Natural Language Processing (CS 585)</i></a></span>
-<br><span style="margin-left:9em"><a href="https://people.cs.umass.edu/~brenocon/cs690d_s19/">Spring 2019: <i>Deep Learning for Natural Language Processing (CS 690D)</i></a></span><br> 
-<span style="margin-left:9em"><a href="https://people.cs.umass.edu/~miyyer/cs585_2018/">Fall 2018: <i>Introduction to Natural Language Processing (CS 585)</i></a></span><br> 
+    <span style="margin-left:1.5em"><a href="cs685/index.html">Spring 2022: <i>How Language Works: Introduction to Linguistic Theory (R2) (LING201)</i></a></span><br>
+    <span style="margin-left:9em"><a href="cs685_f20/index.html">Fall 2020: <i>TA: People and Their Language (LING201)</i></a></span><br> 
         
 </div>
 
