--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
         <div class="posts-wrapper" style="clear:both;margin-bottom:1.0em;">
         
     <span id="gototeaching" style="font-family: 'roboto_bold';font-size:1.4em;text-transform:uppercase;font-weight: 300;">TEACHING</span> 
-    <span style="margin-left:1.5em"><a href="cs685/index.html">Spring 2022: <i>How Language Works: Introduction to Linguistic Theory (R2) (LING201)</i></a></span><br>
-    <span style="margin-left:10em"><a href="cs685_f20/index.html">Fall 2020: <i>TA: People and Their Language (LING201)</i></a></span><br> 
+    <span style="margin-left:1.5em"><p><i>How Language Works: Introduction to Linguistic Theory (R2) (LING201)</i></p></span><br>
+    <span style="margin-left:8.5em"><a href="cs685_f20/index.html">Fall 2020: <i>TA: People and Their Language (LING201)</i></a></span><br> 
         
 </div>
 
