--- a/index.html
+++ b/index.html
@@ -57,8 +57,9 @@
         <div class="posts-wrapper" style="clear:both;margin-bottom:1.0em;">
         
     <span id="gototeaching" style="font-family: 'roboto_bold';font-size:1.4em;text-transform:uppercase;font-weight: 300;">TEACHING</span> 
-    <p style="margin-left:1.5em;margin-top:0.1em;">Fall 2022: <i>How Language Works: Introduction to Linguistic Theory (R2) (LING201)</i></p><br>
-    <p style="margin-left:8.5em">Fall 2020: <i>TA: People and Their Language (LING201)</i></p><br> 
+    <p style="margin-left:1.5em;margin-top:0.1em;">Fall 2022: <i>How Language Works: Introduction to Linguistic Theory (R2) (LING201)</i></p>
+    <p style="margin-left:1.5em">Spring 2022: <i>TA: Introduction to Semantics (LING510)</i></p><br> 
+    <p style="margin-left:1.5em">Fall 2020: <i>TA: People and Their Language (LING201)</i></p><br> 
         
 </div>
 
