--- a/index.html
+++ b/index.html
@@ -58,10 +58,10 @@
         
     <span id="gototeaching" style="font-family: 'roboto_bold';font-size:1.4em;text-transform:uppercase;font-weight: 300;">TEACHING</span> 
     <p style="margin-left:1.5em;margin-top:0.1em;">Fall 2022 <b>Instructor</b>: <i>How Language Works: Introduction to Linguistic Theory (R2) (LING201)</i></p>
-    <p style="margin-left:1.5em;margin-top:-0.75em">Spring 2022 <b>TA</b>: <i>Introduction to Semantics (LING510)</i></p>
-    <p style="margin-left:1.5em;margin-top:-0.75em">Fall 2021 TA: <i>Introduction to Computational Linguistics (LING509)</i></p> 
-    <p style="margin-left:1.5em;margin-top:-0.75em">Spring 2021 TA: <i>How Language Works: Introduction to Linguistic Theory (R2) (LING201)</i></p> 
-    <p style="margin-left:1.5em;margin-top:-0.75em">Fall 2020 TA: <i>People and Their Language (LING101)</i></p><br> 
+    <p style="margin-left:1.5em;margin-top:-0.8em">Spring 2022 <b>TA</b>: <i>Introduction to Semantics (LING510)</i></p>
+    <p style="margin-left:1.5em;margin-top:-0.8em">Fall 2021 <b>TA</b>: <i>Introduction to Computational Linguistics (LING509)</i></p> 
+    <p style="margin-left:1.5em;margin-top:-0.8em">Spring 2021 <b>TA</b>: <i>How Language Works: Introduction to Linguistic Theory (R2) (LING201)</i></p> 
+    <p style="margin-left:1.5em;margin-top:-0.8em">Fall 2020 <b>TA</b>: <i>People and Their Language (LING101)</i></p><br> 
         
 </div>
 
