--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                     <a href="">SLING: Sino Linguistic Evaluation of Large Language Models</a><br>
                     Yixiao Song, Kalpesh Krishna, Rajesh Bhatt, and <b>Mohit Iyyer</b>.<br>
                     <i>EMNLP 2022</i><br>
-                    <h2><a href="javascript:unhide('sling22');" class="bibtex">bibtex</a></h2>
+                    <h2><a href="https://github.com/Yixiao-Song/SLING_Data_Code">code</a> // <a href="javascript:unhide('sling22');" class="bibtex">bibtex</a></h2>
                     <div id="sling22" class="hidden">
                         <pre>
 @inproceedings{sling22,
@@ -99,23 +99,6 @@ author={Marzena Karpinska and Nishant Raj and Katherine Thai and Yixiao Song and
 booktitle = {Empirical Methods in Natural Language Processing},
 Year = "2022",
 Title={DEMETR: Diagnosing Evaluation Metrics for Translation},
-}
-                    </pre>
-                    </div>
-                </li>
-		    
-                <li>
-                    <a href="https://arxiv.org/abs/2205.09278">Modeling Exemplification in Long-form Question Answering via Retrieval</a><br>
-                    Shufan Wang, Fangyuan Xu, Laure Thompson, Eunsol Choi, and <b>Mohit Iyyer</b>.<br>
-                    <i>NAACL 2022</i><br>
-                    <h2><a href="https://github.com/north125ptlm/lfqa-retrieval">code</a> // <a href="javascript:unhide('lfqa22');" class="bibtex">bibtex</a></h2>
-                    <div id="lfqa22" class="hidden">
-                        <pre>
-@inproceedings{lfqa22,
-author={Shufan Wang and Fangyuan Xu and Laure Thompson and Eunsol Choi and Mohit Iyyer},
-Booktitle = {North American Association for Computational Linguistics},
-Year = "2022",
-Title={Modeling Exemplification in Long-form Question Answering via Retrieval},
 }
                     </pre>
                     </div>
