--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@ Title={DEMETR: Diagnosing Evaluation Metrics for Translation},
                 </li>
 
             </ul>
-	This website is built based on Prof. Mohit Iyyer's <a href="https://people.cs.umass.edu/~miyyer/">website</a> template.
+	This website is built based on Prof. Dr. Mohit Iyyer's <a href="https://people.cs.umass.edu/~miyyer/">website</a> template.
         </div>
     </div>
 
