--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@ Title={DEMETR: Diagnosing Evaluation Metrics for Translation},
                 </li>
             </ul>
 		
-<div class="posts-wrapper" style="clear:both;margin-bottom:0.9em;">
+	<div class="posts-wrapper" style="clear:both;margin-top:1.5em;margin-bottom:1em;">
         
     <span id="gototeaching" style="font-family: 'roboto_bold';font-size:1.4em;text-transform:uppercase;font-weight: 300;">TEACHING</span> 
     <p style="margin-left:1.5em;margin-top:0.1em;">Fall 2022 <b>Instructor</b>: <i>How Language Works: Introduction to Linguistic Theory (R2) (LING201)</i></p>
