--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
                 <li>
                     <a href="">SLING: Sino Linguistic Evaluation of Large Language Models</a><br>
-                    Yixiao Song, Kalpesh Krishna, Rajesh Bhatt, and <b>Mohit Iyyer</b>.<br>
+                    <b>Yixiao Song</b>, Kalpesh Krishna, Rajesh Bhatt, and Mohit Iyyer.<br>
                     <i>EMNLP 2022</i><br>
                     <h2><a href="https://github.com/Yixiao-Song/SLING_Data_Code">code</a> // <a href="javascript:unhide('sling22');" class="bibtex">bibtex</a></h2>
                     <div id="sling22" class="hidden">
@@ -77,7 +77,7 @@ Title={SLING: Sino Linguistic Evaluation of Large Language Models},
 
                 <li>
                     <a href="">DEMETR: Diagnosing Evaluation Metrics for Translation</a><br>
-                    Marzena Karpinska, Nishant Raj, Katherine Thai, Yixiao Song, Ankita Gupta, and <b>Mohit Iyyer</b>.<br>
+                    Marzena Karpinska, Nishant Raj, Katherine Thai, <b>Yixiao Song</b>, Ankita Gupta, and Mohit Iyyer.<br>
                     <i>EMNLP 2022</i><br>
                     <h2><a href="javascript:unhide('demetr22');" class="bibtex">bibtex</a></h2>
                     <div id="demetr22" class="hidden">
