--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <ul class="pubs">
 
                 <li>
-                    <a href="https://arxiv.org/abs/2210.11689">SLING: Sino Linguistic Evaluation of Large Language Models</a><br>
+                    <a href="https://arxiv.org/abs/2210.11689" target="_blank">SLING: Sino Linguistic Evaluation of Large Language Models</a><br>
                     <b>Yixiao Song</b>, Kalpesh Krishna, Rajesh Bhatt, and Mohit Iyyer.<br>
                     <i>EMNLP 2022</i><br>
                     <h2><a href="https://github.com/Yixiao-Song/SLING_Data_Code">code</a> // <a href="javascript:unhide('sling22');" class="bibtex">bibtex</a></h2>
