--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
                 <h1>yixiao song</h1>
 
-                <h2>yixiaosong@umass.edu // <a href="Yixiao_Song_CV_2022.pdf"> CV</a> // <a href="https://github.com/Yixiao-Song">github</a> // <a href="https://twitter.com/yixiao_song">twitter</a> // <a href="https://www.instagram.com/yixiao_song/">instagram</a></h2>
+                <h2>yixiaosong@umass.edu // <a href="Yixiao_Song_CV_2022.pdf" target="_blank"> CV</a> // <a href="https://github.com/Yixiao-Song" target="_blank">github</a> // <a href="https://twitter.com/yixiao_song" target="_blank">twitter</a> // <a href="https://www.instagram.com/yixiao_song/" target="_blank">instagram</a></h2>
                 <br>
 
                 <br>
