--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ Title={SLING: Sino Linguistic Evaluation of Large Language Models},
                 </li>
 
                 <li>
-                    <a href="">DEMETR: Diagnosing Evaluation Metrics for Translation</a><br>
+                    <a href="https://arxiv.org/abs/2210.13746" target="_blank">DEMETR: Diagnosing Evaluation Metrics for Translation</a><br>
                     Marzena Karpinska, Nishant Raj, Katherine Thai, <b>Yixiao Song</b>, Ankita Gupta, and Mohit Iyyer.<br>
                     <i>EMNLP 2022</i><br>
                     <h2><a href="javascript:unhide('demetr22');" class="bibtex">bibtex</a></h2>
