--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@ Title={SLING: Sino Linguistic Evaluation of Large Language Models},
                     <a href="https://arxiv.org/abs/2210.13746" target="_blank">DEMETR: Diagnosing Evaluation Metrics for Translation</a><br>
                     Marzena Karpinska, Nishant Raj, Katherine Thai, <b>Yixiao Song</b>, Ankita Gupta, and Mohit Iyyer.<br>
                     <i>EMNLP 2022</i><br>
-                    <h2><a href="javascript:unhide('demetr22');" class="bibtex">bibtex</a></h2>
+                    <h2><a href="https://github.com/marzenakrp/demetr">code</a> // <a href="javascript:unhide('demetr22');" class="bibtex">bibtex</a></h2>
                     <div id="demetr22" class="hidden">
                         <pre>
 @inproceedings{demetr22,
