--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
                 <br>
 
-                <p>I am a PhD student in linguistics at <a href="https://www.umass.edu/linguistics">UMass Amherst</a> and a member of <a href="https://nlp.cs.umass.edu">UMass NLP Lab</a>. I'm advised by <a href="https://people.umass.edu/bhatt/">Prof. Rajesh Bhatt</a> and <a href="https://people.cs.umass.edu/~miyyer/">Prof. Mohit Iyyer</a>. I completed my master's degree in linguistics at <a href="https://www.ling.uni-konstanz.de">University of Konstanz</a>, advised by <a href="https://ling.sprachwiss.uni-konstanz.de/pages/home/romero/">Prof. Maribel Romero</a>. My research interests lie in semantics, syntax-semantics interface, and natural language processing. <br> I am currently working on human and automatic evaluation of paragraph paraphraser, long-form question answering, and long-form machine translation. <br>
+                <p>I am a PhD student in linguistics at <a href="https://www.umass.edu/linguistics">UMass Amherst</a> and a member of <a href="https://nlp.cs.umass.edu">UMass NLP Lab</a>. I'm advised by <a href="https://people.umass.edu/bhatt/">Prof. Rajesh Bhatt</a> and <a href="https://people.cs.umass.edu/~miyyer/">Prof. Mohit Iyyer</a>. I completed my master's degree in linguistics at <a href="https://www.ling.uni-konstanz.de">University of Konstanz</a>, advised by <a href="https://ling.sprachwiss.uni-konstanz.de/pages/home/romero/">Prof. Maribel Romero</a>. My research interests lie in semantics, syntax-semantics interface, and natural language processing. <br> <i>Current projects</i>: improving human and automatic evaluation of paragraph paraphrasing, long-form question answering, and long-form machine translation. <br>
                 </p>
             </div>
         </div>
