--- a/index.html
+++ b/index.html
@@ -86,6 +86,34 @@ Title={DEMETR: Diagnosing Evaluation Metrics for Translation},
                     </div>
                 </li>
             </ul>
+	
+	<div class="posts-wrapper" style="clear:both">
+            <h3 id="gotopubs" style="margin-top:0.5em;margin-bottom:0.5em;">publications</h3>
+            <ul class="pubs">
+
+                <li>
+                    <a href="yixiao_PsychoLing.pdf" target="_blank">How are early cue effects in Chinese relative clauses reflected in Chinese pre-trained language model?</a><br>
+                    <b>Yixiao Song</b><br>
+                    <i>Breadth Paper</i><br>
+                </li>
+
+                <li>
+                    <a href="https://arxiv.org/abs/2210.13746" target="_blank">DEMETR: Diagnosing Evaluation Metrics for Translation</a><br>
+                    Marzena Karpinska, Nishant Raj, Katherine Thai, <b>Yixiao Song</b>, Ankita Gupta, and Mohit Iyyer.<br>
+                    <i>EMNLP 2022</i><br>
+                    <h2><a href="https://github.com/marzenakrp/demetr" target="_blank">code</a> // <a href="javascript:unhide('demetr22');" class="bibtex">bibtex</a></h2>
+                    <div id="demetr22" class="hidden">
+                        <pre>
+@inproceedings{demetr22,
+author={Marzena Karpinska and Nishant Raj and Katherine Thai and Yixiao Song and Ankita Gupta and Mohit Iyyer},
+booktitle = {Empirical Methods in Natural Language Processing},
+Year = "2022",
+Title={DEMETR: Diagnosing Evaluation Metrics for Translation},
+}
+                    </pre>
+                    </div>
+                </li>
+            </ul>
 		
 	<div class="posts-wrapper" style="clear:both;margin-top:1em;margin-bottom:0.5em;">
         
