--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@ Title={DEMETR: Diagnosing Evaluation Metrics for Translation},
             </ul>
 	
 	<div class="posts-wrapper" style="clear:both">
-            <h3 id="gotopubs" style="margin-top:0.5em;margin-bottom:0.5em;">publications</h3>
+            <h3 id="gotopubs" style="margin-top:0.5em;margin-bottom:0.5em;">Other works</h3>
             <ul class="pubs">
 
                 <li>
@@ -98,20 +98,9 @@ Title={DEMETR: Diagnosing Evaluation Metrics for Translation},
                 </li>
 
                 <li>
-                    <a href="https://arxiv.org/abs/2210.13746" target="_blank">DEMETR: Diagnosing Evaluation Metrics for Translation</a><br>
-                    Marzena Karpinska, Nishant Raj, Katherine Thai, <b>Yixiao Song</b>, Ankita Gupta, and Mohit Iyyer.<br>
-                    <i>EMNLP 2022</i><br>
-                    <h2><a href="https://github.com/marzenakrp/demetr" target="_blank">code</a> // <a href="javascript:unhide('demetr22');" class="bibtex">bibtex</a></h2>
-                    <div id="demetr22" class="hidden">
-                        <pre>
-@inproceedings{demetr22,
-author={Marzena Karpinska and Nishant Raj and Katherine Thai and Yixiao Song and Ankita Gupta and Mohit Iyyer},
-booktitle = {Empirical Methods in Natural Language Processing},
-Year = "2022",
-Title={DEMETR: Diagnosing Evaluation Metrics for Translation},
-}
-                    </pre>
-                    </div>
+                    <a href="yixiao_GP1.pdf" target="_blank">Mandarin Chinese alternative questions are not disjoined polar questions</a><br>
+                    <b>Yixiao Song</b><br>
+                    <i>Generals Paper</i><br>
                 </li>
             </ul>
 		
