--- a/index.html
+++ b/index.html
@@ -94,13 +94,13 @@ Title={DEMETR: Diagnosing Evaluation Metrics for Translation},
                 <li>
                     <a href="yixiao_PsychoLing.pdf" target="_blank">How are early cue effects in Chinese relative clauses reflected in Chinese pre-trained language model?</a><br>
                     <b>Yixiao Song</b><br>
-                    <i>Breadth Paper</i><br>
+                    <i>Breadth Paper for satisfying Ph.D. requirements</i><br>
                 </li>
 
                 <li>
                     <a href="yixiao_GP1.pdf" target="_blank">Mandarin Chinese alternative questions are not disjoined polar questions</a><br>
                     <b>Yixiao Song</b><br>
-                    <i>Generals Paper</i><br>
+                    <i>Generals Paper for satisfying Ph.D. requirements</i><br>
                 </li>
             </ul>
 		
