--- a/index.html
+++ b/index.html
@@ -53,6 +53,25 @@
             <ul class="pubs">
 
                 <li>
+                    <a href="https://arxiv.org/abs/2303.13408" target="_blank">Paraphrasing evades detectors of AI-generated text, but retrieval is an effective defense</a><br>
+                    Kalpesh Krishna, <b>Yixiao Song</b>, John Wieting, and Mohit Iyyer.<br>
+                    <i>arXiv 2023</i><br>
+                    <h2><a href="https://github.com/martiansideofthemoon/ai-detection-paraphrases" target="_blank">code</a> // <a href="javascript:unhide('krishna2023paraphrasing');" class="bibtex">bibtex</a></h2>
+                    <div id="krishna2023paraphrasing" class="hidden">
+                        <pre>
+@misc{krishna2023paraphrasing,
+      title={Paraphrasing evades detectors of AI-generated text, but retrieval is an effective defense}, 
+      author={Kalpesh Krishna and Yixiao Song and Marzena Karpinska and John Wieting and Mohit Iyyer},
+      year={2023},
+      eprint={2303.13408},
+      archivePrefix={arXiv},
+      primaryClass={cs.CL}
+}
+                    </pre>
+                    </div>
+                </li>
+		    
+                <li>
                     <a href="https://arxiv.org/abs/2210.11689" target="_blank">SLING: Sino Linguistic Evaluation of Large Language Models</a><br>
                     <b>Yixiao Song</b>, Kalpesh Krishna, Rajesh Bhatt, and Mohit Iyyer.<br>
                     <i>EMNLP 2022</i><br>
