--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
                 <li>
                     <a href="https://arxiv.org/abs/2303.13408" target="_blank">Paraphrasing evades detectors of AI-generated text, but retrieval is an effective defense</a><br>
-                    Kalpesh Krishna, <b>Yixiao Song</b>, John Wieting, and Mohit Iyyer.<br>
+                    Kalpesh Krishna, <b>Yixiao Song</b>, Marzena Karpinska, John Wieting, and Mohit Iyyer.<br>
                     <i>arXiv 2023</i><br>
                     <h2><a href="https://github.com/martiansideofthemoon/ai-detection-paraphrases" target="_blank">code</a> // <a href="javascript:unhide('krishna2023paraphrasing');" class="bibtex">bibtex</a></h2>
                     <div id="krishna2023paraphrasing" class="hidden">
