--- a/index.html
+++ b/index.html
@@ -53,6 +53,19 @@
             <ul class="pubs">
 
                 <li>
+                    <a href="https://yixiao-song.github.io" target="_blank">A Critical Evaluation of Evaluations for Long-form Question Answering</a><br>
+                    Fangyuan Xu*, <b>Yixiao Song*</b>, Mohit Iyyer, and Eunsol Choi.<br>
+		    *Equal contribution<br>
+                    <i>ACL 2023</i><br>
+                    <h2><a href="https://yixiao-song.github.ios" target="_blank">code</a> // <a href="javascript:unhide('acl2023');" class="bibtex">bibtex</a></h2>
+                    <div id="acl2023" class="hidden">
+                        <pre>
+To be updated
+                    </pre>
+                    </div>
+                </li>
+		    
+                <li>
                     <a href="https://arxiv.org/abs/2303.13408" target="_blank">Paraphrasing evades detectors of AI-generated text, but retrieval is an effective defense</a><br>
                     Kalpesh Krishna, <b>Yixiao Song</b>, Marzena Karpinska, John Wieting, and Mohit Iyyer.<br>
                     <i>arXiv 2023</i><br>
