--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                     Fangyuan Xu*, <b>Yixiao Song*</b>, Mohit Iyyer, and Eunsol Choi.<br>
 		    *Equal contribution<br>
                     <i>ACL 2023</i><br>
-                    <h2><a href="https://yixiao-song.github.io" target="_blank">code</a> // <a href="javascript:unhide('acl2023');" class="bibtex">bibtex</a></h2>
+                    <h2><a href="https://github.com/carriex/lfqa_eval" target="_blank">code</a> // <a href="javascript:unhide('acl2023');" class="bibtex">bibtex</a></h2>
                     <div id="acl2023" class="hidden">
                         <pre>
 To be updated
