--- a/index.html
+++ b/index.html
@@ -51,6 +51,23 @@
         <div class="posts-wrapper" style="clear:both">
             <h3 id="gotopubs" style="margin-top:0.5em;margin-bottom:0.5em;">publications</h3>
             <ul class="pubs">
+		<li>
+                    <a href="https://arxiv.org/abs/2305.14625" target="_blank">kNN-LM Does Not Improve Open-ended Text Generation</a><br>
+                    Shufan Wang, <b>Yixiao Song</b>, Andrew Drozdov, Aparna Garimella, Varun Manjunatha, and Mohit Iyyer.<br>
+                    <i>arXiv 2023</i><br>
+                    <h2><a href="javascript:unhide('knnlm23');" class="bibtex">bibtex</a></h2>
+                    <div id="knnlm23" class="hidden">
+                        <pre>
+@inproceedings{knnlm23,
+author={Shufan Wang and Yixiao Song and Andrew Drozdov and Aparna Garimella and Varun Manjunatha and  Mohit Iyyer},
+booktitle = {arXiv},
+Year = "2023",
+Title={KNN-LM Does Not Improve Open-ended Text Generation
+},
+}
+                    </pre>
+                    </div>
+                </li>
 
                 <li>
                     <a href="https://yixiao-song.github.io" target="_blank">A Critical Evaluation of Evaluations for Long-form Question Answering</a><br>
