Update LFQA arxiv info

--- a/index.html
+++ b/index.html
@@ -70,14 +70,21 @@ Title={KNN-LM Does Not Improve Open-ended Text Generation
                 </li>
 
                 <li>
-                    <a href="https://yixiao-song.github.io" target="_blank">A Critical Evaluation of Evaluations for Long-form Question Answering</a><br>
+                    <a href="https://arxiv.org/abs/2305.18201" target="_blank">A Critical Evaluation of Evaluations for Long-form Question Answering</a><br>
                     Fangyuan Xu*, <b>Yixiao Song*</b>, Mohit Iyyer, and Eunsol Choi.<br>
 		    *Equal contribution<br>
                     <i>ACL 2023</i><br>
                     <h2><a href="https://github.com/carriex/lfqa_eval" target="_blank">code</a> // <a href="javascript:unhide('acl2023');" class="bibtex">bibtex</a></h2>
                     <div id="acl2023" class="hidden">
                         <pre>
-To be updated
+@misc{xu2023critical,
+      title={A Critical Evaluation of Evaluations for Long-form Question Answering}, 
+      author={Fangyuan Xu and Yixiao Song and Mohit Iyyer and Eunsol Choi},
+      year={2023},
+      eprint={2305.18201},
+      archivePrefix={arXiv},
+      primaryClass={cs.CL}
+}
                     </pre>
                     </div>
                 </li>
