Update LFQA bibtex

--- a/index.html
+++ b/index.html
@@ -77,13 +77,12 @@ Title={KNN-LM Does Not Improve Open-ended Text Generation
                     <h2><a href="https://github.com/carriex/lfqa_eval" target="_blank">code</a> // <a href="javascript:unhide('acl2023');" class="bibtex">bibtex</a></h2>
                     <div id="acl2023" class="hidden">
                         <pre>
-@misc{xu2023critical,
-      title={A Critical Evaluation of Evaluations for Long-form Question Answering}, 
-      author={Fangyuan Xu and Yixiao Song and Mohit Iyyer and Eunsol Choi},
-      year={2023},
-      eprint={2305.18201},
-      archivePrefix={arXiv},
-      primaryClass={cs.CL}
+
+@inproceedings{lfqa23,
+author={Fangyuan Xu and Yixiao Song and Mohit Iyyer and Eunsol Choi},
+Booktitle = {Association of Computational Linguistics},
+Year = "2023",
+Title={A Critical Evaluation of Evaluations for Long-form Question Answering},
 }
                     </pre>
                     </div>
