--- a/index.html
+++ b/index.html
@@ -164,13 +164,13 @@ Title={DEMETR: Diagnosing Evaluation Metrics for Translation},
     <span id="gototeaching" style="font-family: 'roboto_bold';font-size:1.4em;text-transform:uppercase;font-weight: 300;">TEACHING</span> 
     <p style="margin-left:1.5em;margin-top:0.1em">*Fall 2023 <b>TA</b>: <i>Cognitive Modeling (LING692C)</i></p>
     <p style="margin-left:1.5em;margin-top:-1.1em">Spring 2023 <b>TA</b>: <i>Advanced Natural Language Processing (CS685)</i></p>
-    <p style="margin-left:1.5em;margin-top:-1.1em">Fall 2022 <b>Instructor</b>: <i>How Language Works: Introduction to Linguistic Theory (R2) (LING201)</i></p>
+    <p style="margin-left:1.5em;margin-top:-1.1em">†Fall 2022 <b>Instructor</b>: <i>How Language Works: Introduction to Linguistic Theory (R2) (LING201)</i></p>
     <p style="margin-left:1.5em;margin-top:-1.1em">*Spring 2022 <b>TA</b>: <i>Introduction to Semantics (LING510)</i></p>
     <p style="margin-left:1.5em;margin-top:-1.1em">*Fall 2021 <b>TA</b>: <i>Introduction to Computational Linguistics (LING509)</i></p> 
     <p style="margin-left:1.5em;margin-top:-1.1em">*Spring 2021 <b>TA</b>: <i>How Language Works: Introduction to Linguistic Theory (R2) (LING201)</i></p> 
     <p style="margin-left:1.5em;margin-top:-1.1em">*Fall 2020 <b>TA</b>: <i>People and Their Language (LING101)</i></p>
     <p style="margin-left:1.5em;margin-top:-1.1em">*Fall 2018 <b>TA</b>: <i>Core Components of Language B (Master's program class)</i></p><br> 
-    <p style="margin-left:1.5em;margin-top:-1.1em">*With weekly tutorial session, homework grading, office hour</i></p><br> 
+    <p style="margin-left:1.5em;margin-top:-1.1em">*With weekly tutorial session, homework grading, office hour; † with weekly teaching sessions, homework grading, office hour</i></p><br> 
         
 	</div>
 		
