--- a/index.html
+++ b/index.html
@@ -68,6 +68,25 @@ Title={KNN-LM Does Not Improve Open-ended Text Generation
                     </pre>
                     </div>
                 </li>
+		    
+                <li>
+                    <a href="https://arxiv.org/abs/2303.13408" target="_blank">Paraphrasing evades detectors of AI-generated text, but retrieval is an effective defense</a><br>
+                    Kalpesh Krishna, <b>Yixiao Song</b>, Marzena Karpinska, John Wieting, and Mohit Iyyer.<br>
+                    <i>NeurIPS 2023</i><br>
+                    <h2><a href="https://github.com/martiansideofthemoon/ai-detection-paraphrases" target="_blank">code</a> // <a href="javascript:unhide('krishna2023paraphrasing');" class="bibtex">bibtex</a></h2>
+                    <div id="krishna2023paraphrasing" class="hidden">
+                        <pre>
+@misc{krishna2023paraphrasing,
+      title={Paraphrasing evades detectors of AI-generated text, but retrieval is an effective defense}, 
+      author={Kalpesh Krishna and Yixiao Song and Marzena Karpinska and John Wieting and Mohit Iyyer},
+      year={2023},
+      eprint={2303.13408},
+      archivePrefix={arXiv},
+      primaryClass={cs.CL}
+}
+                    </pre>
+                    </div>
+                </li>
 
                 <li>
                     <a href="https://arxiv.org/abs/2305.18201" target="_blank">A Critical Evaluation of Evaluations for Long-form Question Answering</a><br>
@@ -83,25 +102,6 @@ author={Fangyuan Xu and Yixiao Song and Mohit Iyyer and Eunsol Choi},
 Booktitle = {Association of Computational Linguistics},
 Year = "2023",
 Title={A Critical Evaluation of Evaluations for Long-form Question Answering},
-}
-                    </pre>
-                    </div>
-                </li>
-		    
-                <li>
-                    <a href="https://arxiv.org/abs/2303.13408" target="_blank">Paraphrasing evades detectors of AI-generated text, but retrieval is an effective defense</a><br>
-                    Kalpesh Krishna, <b>Yixiao Song</b>, Marzena Karpinska, John Wieting, and Mohit Iyyer.<br>
-                    <i>arXiv 2023</i><br>
-                    <h2><a href="https://github.com/martiansideofthemoon/ai-detection-paraphrases" target="_blank">code</a> // <a href="javascript:unhide('krishna2023paraphrasing');" class="bibtex">bibtex</a></h2>
-                    <div id="krishna2023paraphrasing" class="hidden">
-                        <pre>
-@misc{krishna2023paraphrasing,
-      title={Paraphrasing evades detectors of AI-generated text, but retrieval is an effective defense}, 
-      author={Kalpesh Krishna and Yixiao Song and Marzena Karpinska and John Wieting and Mohit Iyyer},
-      year={2023},
-      eprint={2303.13408},
-      archivePrefix={arXiv},
-      primaryClass={cs.CL}
 }
                     </pre>
                     </div>
