--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 		<li>
                     <a href="https://arxiv.org/abs/2305.14625" target="_blank">kNN-LM Does Not Improve Open-ended Text Generation</a><br>
                     Shufan Wang, <b>Yixiao Song</b>, Andrew Drozdov, Aparna Garimella, Varun Manjunatha, and Mohit Iyyer.<br>
-                    <i>arXiv 2023</i><br>
+                    <i>EMNLP 2023</i><br>
                     <h2><a href="javascript:unhide('knnlm23');" class="bibtex">bibtex</a></h2>
                     <div id="knnlm23" class="hidden">
                         <pre>
