--- a/index.html
+++ b/index.html
@@ -55,15 +55,15 @@
 		<li>
                     <a href="https://arxiv.org/abs/2305.14625" target="_blank">GEE! Grammar Error Explanation with Large Language Models</a><br>
                     <b>Yixiao Song</b>, Kalpesh Krishna, Rajesh Bhatt, Kevin Gimpel, and Mohit Iyyer.<br>
-                    <i>EMNLP 2023</i><br>
+                    <i>arXiv</i><br>
                     <h2><a href="javascript:unhide('knnlm23');" class="bibtex">bibtex</a></h2>
-                    <div id="knnlm23" class="hidden">
+                    <div id="song-etal-gee" class="hidden">
                         <pre>
-@inproceedings{knnlm23,
-author={Shufan Wang and Yixiao Song and Andrew Drozdov and Aparna Garimella and Varun Manjunatha and  Mohit Iyyer},
+@misc{song-etal-gee,
+author={Yixiao Song and Kalpesh Krishna and Rajesh Bhatt and Kevin Gimpel and  Mohit Iyyer},
 booktitle = {arXiv},
 Year = "2023",
-Title={KNN-LM Does Not Improve Open-ended Text Generation
+Title={GEE! Grammar Error Explanation with Large Language Models
 },
 }
                     </pre>
