--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                     <a href="https://arxiv.org/abs/2311.09517" target="_blank">GEE! Grammar Error Explanation with Large Language Models</a><br>
                     <b>Yixiao Song</b>, Kalpesh Krishna, Rajesh Bhatt, Kevin Gimpel, and Mohit Iyyer.<br>
                     <i>arXiv</i><br>
-                    <h2><a href="javascript:unhide('knnlm23');" class="bibtex">bibtex</a></h2>
+                    <h2><a href="javascript:unhide('song-etal-gee');" class="bibtex">bibtex</a></h2>
                     <div id="song-etal-gee" class="hidden">
                         <pre>
 @misc{song-etal-gee,
