--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
                 <br>
 
-                <p>I am a PhD candidate in linguistics at <a href="https://www.umass.edu/linguistics">UMass Amherst</a> and a member of <a href="https://nlp.cs.umass.edu">UMass NLP Lab</a>. I'm advised by <a href="https://people.umass.edu/bhatt/">Prof. Rajesh Bhatt</a> and <a href="https://people.cs.umass.edu/~miyyer/">Prof. Mohit Iyyer</a>. I completed my master's degree in linguistics at <a href="https://www.ling.uni-konstanz.de">University of Konstanz</a>, advised by <a href="https://ling.sprachwiss.uni-konstanz.de/pages/home/romero/">Prof. Maribel Romero</a>. My research interests lie in semantics, syntax-semantics interface, and natural language processing. <br> <i>Current projects</i>: grammar error explanation and factuality evaluation in long-form question answering. <br>
+                <p>I am a PhD candidate in linguistics at <a href="https://www.umass.edu/linguistics">UMass Amherst</a> and a member of <a href="https://nlp.cs.umass.edu">UMass NLP Lab</a>. I'm advised by <a href="https://people.umass.edu/bhatt/">Prof. Rajesh Bhatt</a> and <a href="https://people.cs.umass.edu/~miyyer/">Prof. Mohit Iyyer</a>. I completed my master's degree in linguistics at <a href="https://www.ling.uni-konstanz.de">University of Konstanz</a>, advised by <a href="https://ling.sprachwiss.uni-konstanz.de/pages/home/romero/">Prof. Maribel Romero</a>. My research interests lie in semantics, syntax-semantics interface, and natural language processing. <br> <i>Current projects</i>: grammar error explanation and factuality evaluation. <br>
                 </p>
             </div>
         </div>
