--- a/index.html
+++ b/index.html
@@ -189,8 +189,8 @@ Title={DEMETR: Diagnosing Evaluation Metrics for Translation},
     <p style="margin-left:1.5em;margin-top:-1.1em">*Spring 2021 <b>TA</b>: <i>How Language Works: Introduction to Linguistic Theory (R2) (LING201)</i></p> 
     <p style="margin-left:1.5em;margin-top:-1.1em">*Fall 2020 <b>TA</b>: <i>People and Their Language (LING101)</i></p>
     <p style="margin-left:1.5em;margin-top:-1.1em">*Fall 2018 <b>TA</b>: <i>Core Components of Language B (Master's program class)</i></p><br> 
-    <p style="margin-left:1.5em;margin-top:-1.1em">*With weekly tutorial session, homework grading, office hour;</i></p>
-    <p style="margin-left:1.5em;margin-top:-1.1em">†with weekly teaching sessions, homework grading, office hour</i></p><br> 
+    <p style="margin-left:1.5em;margin-top:-1.1em">* With weekly tutorial session, homework grading, office hour;</i></p>
+    <p style="margin-left:1.5em;margin-top:-1.1em">† With weekly teaching sessions, homework grading, office hour</i></p><br> 
         
 	</div>
 		
