--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                         <pre>
 @misc{song-etal-gee,
 author={Yixiao Song and Kalpesh Krishna and Rajesh Bhatt and Kevin Gimpel and  Mohit Iyyer},
-booktitle = {arXiv},
+booktitle = {Findings of NAACL 2024},
 Year = "2023",
 Title={GEE! Grammar Error Explanation with Large Language Models
 },
