--- a/index.html
+++ b/index.html
@@ -55,13 +55,13 @@
 		<li>
                     <a href="https://arxiv.org/abs/2311.09517" target="_blank">GEE! Grammar Error Explanation with Large Language Models</a><br>
                     <b>Yixiao Song</b>, Kalpesh Krishna, Rajesh Bhatt, Kevin Gimpel, and Mohit Iyyer.<br>
-                    <i>arXiv</i><br>
+                    <i>Findings of NAACL 2024</i><br>
                     <h2><a href="javascript:unhide('song-etal-gee');" class="bibtex">bibtex</a></h2>
                     <div id="song-etal-gee" class="hidden">
                         <pre>
 @misc{song-etal-gee,
 author={Yixiao Song and Kalpesh Krishna and Rajesh Bhatt and Kevin Gimpel and  Mohit Iyyer},
-booktitle = {Findings of NAACL 2024},
+booktitle = {arXiv},
 Year = "2023",
 Title={GEE! Grammar Error Explanation with Large Language Models
 },
