--- a/index.html
+++ b/index.html
@@ -51,17 +51,35 @@
         <div class="posts-wrapper" style="clear:both">
             <h3 id="gotopubs" style="margin-top:0.5em;margin-bottom:0.5em;">publications</h3>
             <ul class="pubs">
-		    
+	    	<li>
+                    <a href="https://arxiv.org/abs/2406.19276" target="_blank">VERISCORE: Evaluating the factuality of verifiable claims in long-form text generation</a><br>
+                    <b>Yixiao Song</b>, Yekyung Kim, and Mohit Iyyer.<br>
+                    <i>arXiv</i><br>
+                    <h2><a href="javascript:unhide('song-etal-gee');" class="bibtex">bibtex</a></h2>
+                    <div id="veriscore" class="hidden">
+                        <pre>
+@misc{veriscore,
+      title={VERISCORE: Evaluating the factuality of verifiable claims in long-form text generation}, 
+      author={Yixiao Song and Yekyung Kim and Mohit Iyyer},
+      year={2024},
+      eprint={2406.19276},
+      archivePrefix={arXiv},
+      primaryClass={cs.CL},
+      url={https://arxiv.org/abs/2406.19276}, 
+}
+                    </pre>
+                    </div>
+                </li>		    
 		<li>
-                    <a href="https://arxiv.org/abs/2311.09517" target="_blank">GEE! Grammar Error Explanation with Large Language Models</a><br>
+                    <a href="https://aclanthology.org/2024.findings-naacl.49/" target="_blank">GEE! Grammar Error Explanation with Large Language Models</a><br>
                     <b>Yixiao Song</b>, Kalpesh Krishna, Rajesh Bhatt, Kevin Gimpel, and Mohit Iyyer.<br>
                     <i>Findings of NAACL 2024</i><br>
                     <h2><a href="javascript:unhide('song-etal-gee');" class="bibtex">bibtex</a></h2>
                     <div id="song-etal-gee" class="hidden">
                         <pre>
-@misc{song-etal-gee,
+@inproceedings{song-etal-gee,
 author={Yixiao Song and Kalpesh Krishna and Rajesh Bhatt and Kevin Gimpel and  Mohit Iyyer},
-booktitle = {arXiv},
+booktitle = {Findings of the Association for Computational Linguistics: NAACL 2024},
 Year = "2023",
 Title={GEE! Grammar Error Explanation with Large Language Models
 },
