--- a/index.html
+++ b/index.html
@@ -69,7 +69,26 @@
 }
                     </pre>
                     </div>
-                </li>		    
+                </li>
+	    	<li>
+                    <a href="https://arxiv.org/abs/2407.11930" target="_blank">Fine-grained Hallucination Detection and Mitigation in Long-form Question Answering</a><br>
+                    Rachneet Sachdeva, <b>Yixiao Song</b>, Mohit Iyyer, Iryna Gurevych.<br>
+                    <i>arXiv</i><br>
+                    <h2><a href="javascript:unhide('song-etal-gee');" class="bibtex">bibtex</a></h2>
+                    <div id="hallu-detect" class="hidden">
+                        <pre>
+@misc{sachdeva2024finegrainedhallucinationdetectionmitigation,
+      title={Fine-grained Hallucination Detection and Mitigation in Long-form Question Answering}, 
+      author={Rachneet Sachdeva and Yixiao Song and Mohit Iyyer and Iryna Gurevych},
+      year={2024},
+      eprint={2407.11930},
+      archivePrefix={arXiv},
+      primaryClass={cs.CL},
+      url={https://arxiv.org/abs/2407.11930}, 
+}
+                    </pre>
+                    </div>
+                </li>
 		<li>
                     <a href="https://aclanthology.org/2024.findings-naacl.49/" target="_blank">GEE! Grammar Error Explanation with Large Language Models</a><br>
                     <b>Yixiao Song</b>, Kalpesh Krishna, Rajesh Bhatt, Kevin Gimpel, and Mohit Iyyer.<br>
