--- a/index.html
+++ b/index.html
@@ -54,18 +54,16 @@
 	    	<li>
                     <a href="https://arxiv.org/abs/2406.19276" target="_blank">VERISCORE: Evaluating the factuality of verifiable claims in long-form text generation</a><br>
                     <b>Yixiao Song</b>, Yekyung Kim, and Mohit Iyyer.<br>
-                    <i>arXiv</i><br>
+                    <i>Findings of EMNLP2024</i><br>
                     <h2><a href="javascript:unhide('song-etal-gee');" class="bibtex">bibtex</a></h2>
                     <div id="veriscore" class="hidden">
                         <pre>
-@misc{veriscore,
-      title={VERISCORE: Evaluating the factuality of verifiable claims in long-form text generation}, 
-      author={Yixiao Song and Yekyung Kim and Mohit Iyyer},
-      year={2024},
-      eprint={2406.19276},
-      archivePrefix={arXiv},
-      primaryClass={cs.CL},
-      url={https://arxiv.org/abs/2406.19276}, 
+@inproceedings{veriscore,
+author={Yixiao Song and Yekyung Kim and Mohit Iyyer},
+booktitle = {Findings of EMNLP},
+Year = "2024",
+Title={VERISCORE: Evaluating the factuality of verifiable claims in long-form text generation
+},
 }
                     </pre>
                     </div>
