--- a/index.html
+++ b/index.html
@@ -59,11 +59,10 @@
                     <div id="veriscore" class="hidden">
                         <pre>
 @inproceedings{veriscore,
-author={Yixiao Song and Yekyung Kim and Mohit Iyyer},
-booktitle = {Findings of EMNLP},
-Year = "2024",
-Title={VERISCORE: Evaluating the factuality of verifiable claims in long-form text generation
-},
+	       author={Yixiao Song and Yekyung Kim and Mohit Iyyer},
+	       booktitle = {Findings of EMNLP},
+	       Year = "2024",
+	       Title={VERISCORE: Evaluating the factuality of verifiable claims in long-form text generation},
 }
                     </pre>
                     </div>
