--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
 	    	<li>
                     <a href="https://arxiv.org/abs/2406.19276" target="_blank">VERISCORE: Evaluating the factuality of verifiable claims in long-form text generation</a><br>
                     <b>Yixiao Song</b>, Yekyung Kim, and Mohit Iyyer.<br>
-                    <i>Findings of EMNLP2024</i><br>
-                    <h2><a href="javascript:unhide('song-etal-gee');" class="bibtex">bibtex</a></h2>
+                    <i>Findings of EMNLP 2024</i><br>
+                    <h2><a href="javascript:unhide('veriscore');" class="bibtex">bibtex</a></h2>
                     <div id="veriscore" class="hidden">
                         <pre>
 @inproceedings{veriscore,
@@ -72,7 +72,7 @@
                     Rachneet Sachdeva, <b>Yixiao Song</b>, Mohit Iyyer, Iryna Gurevych.<br>
                     <i>arXiv</i><br>
                     <h2><a href="javascript:unhide('song-etal-gee');" class="bibtex">bibtex</a></h2>
-                    <div id="hallu-detect" class="hidden">
+                    <div id="veriscore" class="hidden">
                         <pre>
 @misc{sachdeva2024finegrainedhallucinationdetectionmitigation,
       title={Fine-grained Hallucination Detection and Mitigation in Long-form Question Answering}, 
