--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
                     <a href="https://arxiv.org/abs/2407.11930" target="_blank">Fine-grained Hallucination Detection and Mitigation in Long-form Question Answering</a><br>
                     Rachneet Sachdeva, <b>Yixiao Song</b>, Mohit Iyyer, Iryna Gurevych.<br>
                     <i>arXiv</i><br>
-                    <h2><a href="javascript:unhide('song-etal-gee');" class="bibtex">bibtex</a></h2>
-                    <div id="veriscore" class="hidden">
+                    <h2><a href="javascript:unhide('halluquest');" class="bibtex">bibtex</a></h2>
+                    <div id="halluquest" class="hidden">
                         <pre>
 @misc{sachdeva2024finegrainedhallucinationdetectionmitigation,
       title={Fine-grained Hallucination Detection and Mitigation in Long-form Question Answering}, 
