--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
                 <br>
 
-                <p>I am a PhD student in computer science at <a href="https://www.umass.edu/linguistics">UMass Amherst</a> and a member of <a href="https://nlp.cs.umass.edu">UMass NLP Lab</a>. I'm advised by <a href="https://people.cs.umass.edu/~miyyer/">Prof. Mohit Iyyer</a> and <a href="https://people.umass.edu/bhatt/">Prof. Rajesh Bhatt</a>. I completed my master's degree in linguistics at <a href="https://www.ling.uni-konstanz.de">University of Konstanz</a>, advised by <a href="https://ling.sprachwiss.uni-konstanz.de/pages/home/romero/">Prof. Maribel Romero</a>. My research interests lie in human and automatic evaluation in the field of natural language processing. <br> <i>Current projects</i>: grammar error explanation, factuality evaluation, and human evaluation with fine-grained error span annotation. <br>
+                <p>I am a PhD student in computer science at <a href="https://www.umass.edu/linguistics">UMass Amherst</a> and a member of <a href="https://nlp.cs.umass.edu">UMass NLP Lab</a>. I'm advised by <a href="https://people.cs.umass.edu/~miyyer/">Prof. Mohit Iyyer</a> and <a href="https://people.umass.edu/bhatt/">Prof. Rajesh Bhatt</a>. I completed my master's degree in linguistics at <a href="https://www.ling.uni-konstanz.de">University of Konstanz</a>, advised by <a href="https://ling.sprachwiss.uni-konstanz.de/pages/home/romero/">Prof. Maribel Romero</a>. My research interests lie in human and automatic evaluation in the field of natural language processing. <br> <i>Current projects</i>: AI agent evaluation, factuality evaluation, and human evaluation with fine-grained error span annotation. <br>
                 </p>
             </div>
         </div>
